--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.2",
     "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "ng-block-ui": "^4.0.1",
     "ngx-bootstrap": "^18.1.3",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
