--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@microsoft/signalr": "^8.0.7",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
+    "@primeng/themes": "^18.0.2",
     "angular-i18next": "^18.0.0",
     "bootstrap": "^5.3.6",
     "i18next": "^23.7.16",
@@ -31,6 +32,9 @@
     "ng-block-ui": "^4.0.1",
     "ngx-bootstrap": "^18.1.3",
     "ngx-toastr": "^19.0.0",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^18.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
